<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_hourglass_empty_white_48dp"
            android:checked="true"
            android:title="@string/drawer_view_timer" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_event_white_48dp"
            android:title="@string/drawer_view_log" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/drawer_view_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_48dp"
            android:title="@string/drawer_view_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_white_48dp"
            android:title="@string/drawer_view_logout" />
    </group>
</menu>