<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    style="@style/WorktajmLogin">

    <!-- Login progress -->

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/email_login_form_01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/LoginTimeReports"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="32dp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp" />

            <Button
                style="@style/LoginButton"
                android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_with_google"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#ff6803"
                android:layout_gravity="center" />

            <Button
                style="@style/LoginButton"
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_with_facebook"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#1020ff"
                android:layout_gravity="center_horizontal" />
            <!-- stretching frame layout, using layout_weight -->
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            </FrameLayout>

            <!-- content fixated to the bottom of the screen -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- your bottom content -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/sign_in_with"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:capitalize="characters"
                    android:editable="true" />

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorLink="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textColorHighlight="#ffffff" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textColorLink="#ffffff" />

                <Button android:id="@+id/email_sign_in_button" style="@style/LoginButton"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="#ff6803" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
