<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arnellconsulting.worktajm.ProgressFragment">

    <TextView
        android:id="@+id/communicatingWithServerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/communicating_with_server_text"
        android:layout_marginTop="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/projectProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_project_progress"
        android:layout_below="@+id/communicatingWithServerText"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/projectProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/projectProgressText"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_time_entries_progress"
        android:layout_below="@+id/projectProgressBar"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/timeEntryProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/progressBarStyleHorizontal"/>


</RelativeLayout>
